tweet-analyzing-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: tweet-analyzing-service
  name: tweet-analyzing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tweet-analyzing-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/tweet-analyzer-final-project-default: "true"
        io.kompose.service: tweet-analyzing-service
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: postgres
            - name: DB_NAME
              value: postgres
            - name: DB_USER
              value: postgres
          image: tweet-analyzing-service:latest
          name: tweet-analyzing-service
          ports:
            - containerPort: 3004
              hostPort: 3004
              protocol: TCP
      restartPolicy: Always
