web-interface-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: web-interface-service
  name: web-interface-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-interface-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/tweet-analyzer-final-project-default: "true"
        io.kompose.service: web-interface-service
    spec:
      containers:
        - image: web-interface-service:latest
          name: web-interface-service
          ports:
            - containerPort: 3001
              hostPort: 3001
              protocol: TCP
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
