database-feeding-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: database-feeding-service
  name: database-feeding-service
spec:
  ports:
    - name: "3999"
      port: 3999
      targetPort: 3999
  selector:
    io.kompose.service: database-feeding-service
