tweet-analyzing-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: tweet-analyzing-service
  name: tweet-analyzing-service
spec:
  ports:
    - name: "3004"
      port: 3004
      targetPort: 3004
  selector:
    io.kompose.service: tweet-analyzing-service
