kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-interface-service
                port:
                  number: 3001
          - path: /parse-input
            pathType: Prefix
            backend:
              service:
                name: input-parsing-service
                port:
                  number: 3002
